--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 # Config file #
 config.json
+
+# Executables #
+*.exe
+spotkov
+
+# File System Metadata #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
