--- a/configRead/testConfig.json
+++ b/configRead/testConfig.json
@@ -2,5 +2,10 @@
   "spotify-key": "8618b5e1ae78469281e8914e836d3f4b",
   "spotify-secret": "7b8d739a4e99463abe49d0e329dc5703",
   "lastfm-key": "938eb856c3c74376bbcaee05b1b2ed04",
-  "lastfm-secret": "6e91b9467ea647858e8b51660bc0737d"
+  "lastfm-secret": "6e91b9467ea647858e8b51660bc0737d",
+  "cert-path" : "telskj.p12",
+  "cert-key-path" : "03uoiuo.p12",
+  "http-port" : ":80",
+  "tls-port" : ":443",
+  "hostname" : "siteysite.site"
 }
