The huge request one Added configurable auth redirect callback URI Added a LastFMError (may remove that) Improved the error messages Added a panic handler for wrapper function of getting titles Now batch requests over 100 pages for a profile Now times out if it can't get a page (before it was 200+ sockets being open and one hanging and nothing getting closed)

--- a/configRead/testConfig.json
+++ b/configRead/testConfig.json
@@ -7,5 +7,6 @@
   "cert-key-path" : "03uoiuo.p12",
   "http-port" : ":80",
   "tls-port" : ":443",
-  "hostname" : "siteysite.site"
+  "hostname" : "siteysite.site",
+  "auth-redirect-url" : "siteysite.site/callback"
 }
