--- a/configRead/testConfig.json
+++ b/configRead/testConfig.json
@@ -5,5 +5,6 @@
   "lastfm-secret": "6e91b9467ea647858e8b51660bc0737d",
   "http-port" : ":80",
   "hostname" : "siteysite.site",
-  "auth-redirect-url" : "siteysite.site/callback"
+  "auth-redirect-url" : "siteysite.site/callback",
+  "debug": false,
 }
