Config and Tools tests Fixed config test JSON file Added a testing file to tools to check that the string stripper works correctly

--- a/configRead/testConfig.json
+++ b/configRead/testConfig.json
@@ -6,5 +6,5 @@
   "http-port" : ":80",
   "hostname" : "siteysite.site",
   "auth-redirect-url" : "siteysite.site/callback",
-  "debug": false,
+  "debug": false
 }
