--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: go
 install:
   - go get github.com/zmb3/spotify
   - go get github.com/atotto/clipboard
-  - go get github.com/mediocregopher/radix.v2/redis
+  - go get github.com/go-redis/redis
 
 services: redis-server
